@@ -4,6 +4,9 @@ Revision history for Mason
 
 2.23  Feb 1, 2014
 
+* Fixes
+  - Detect empty <% %> tags (A Kobame)
+
 2.22  Feb 1, 2014
 
 * Fixes
